--- a/src/styles.css
+++ b/src/styles.css
@@ -12,4 +12,44 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  background-color: rgb(97, 39, 39);
+}
+
+.title {
+  text-align: center;
+  margin-top: 75px;
+  font-size: 50px;
+  color: wheat;
+  font-weight: 700;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+}
+
+.field {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  border: 1px solid wheat;
+  padding: 40px;
+  border-radius: 5px;
+  margin: 30px;
+}
+
+.field span {
+  color: wheat;
+  font-weight: 700;
+}
+
+.value {
+  font-size: 50px;
+}
+
+.img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
